# ZASCA

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml  uv.toml
.github/workflows/: build-windows-service.yml  collectstatic.yml
apps/accounts/: admin.py  captcha_service.py  email_service.py  rate_limit.py  views.py
apps/audit/: decorators.py  views.py
apps/bootstrap/: admin.py  middleware.py  views.py
apps/certificates/: views.py
apps/dashboard/: admin.py  context_processors.py  forms.py  models.py  signals.py  views.py
apps/dashboard/migrations/: 0003_systemconfig_icp_number_systemconfig_police_number.py  0004_remove_system_stats.py  0005_add_local_access_locked.py
apps/hosts/: admin.py  models.py  tasks.py
apps/hosts/migrations/: 0006_host_administrators.py  (+2 more)
apps/operations/: admin.py  forms.py  models.py  services.py  tasks.py  urls.py  views.py
config/: local_lock_middleware.py  settings.py  urls.py  views.py
cpp/: main.cpp
frontend/templates/: base.html  maintenance.html
plugins/: views.py
static/css/: accounts.css  base.css  dashboard.css  operations.css  profile.css  theme.css
static/js/: accounts.js  base.js  geetest_v4_adapter.js  local_captcha_adapter.js
templates/: base.html
templates/accounts/: forgot_password.html  login.html  register.html
templates/admin/: base.html  base_site.html
templates/components/: alert.html  button.html
templates/dashboard/: base.html  index.html  system_config.html  widget_config.html
templates/operations/: account_opening_request_form.html  account_opening_request_list.html  my_cloud_computer_detail.html  my_cloud_computers.html
utils/: disk_quota.py  helpers.py  local_winserver_client.py  production_checker.py  rate_limit.py  winrm_client.py
(+22 files in other folders)
